# ConfEval_GithubCopilot_GPT5.4

./: README.md  generate_reports.sh  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260413_0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  applications.py  auth.py  conferences.py  notifications.py  projects.py  reviews.py  tags.py  (+1 more)
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: base.py  bootstrap.py  seed.py
backend/app/models/: __init__.py  associations.py  base.py  conference.py  enums.py  notification.py  project.py  review.py  setting.py  tag.py  user.py
backend/app/schemas/: application.py  auth.py  common.py  conference.py  notification.py  project.py  review.py  tag.py  team.py  user.py
backend/app/services/: application_service.py  auth_service.py  conference_service.py  file_service.py  notification_service.py  project_service.py  review_service.py  tag_service.py  team_service.py  user_service.py
backend/app/utils/: calculations.py  location.py  visibility.py
backend/confeval_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_application_service.py  test_auth_service.py  test_domain_rules.py  test_file_service.py  test_health.py  test_migration_smoke.py  test_notification_service.py  test_project_service.py  test_review_service.py  test_seed.py  test_team_service.py  test_visibility.py
(+62 files in other folders)
